--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_project_view.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_project_view.xml
@@ -7,6 +7,7 @@
     tools:context="com.example.ekanugrahapratama.aardvark_project.projectView">
 
     <FrameLayout
+        android:id="@+id/cipherTextContainer"
         android:layout_width="379dp"
         android:layout_height="178dp"
         android:layout_marginEnd="8dp"
@@ -17,14 +18,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/cipherView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="<Dynamic cipher text content>" />
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/BottomFrame"
         android:layout_width="368dp"
         android:layout_height="298dp"
         android:layout_marginBottom="4dp"
@@ -41,9 +51,10 @@
             android:fillViewport="true">
 
             <LinearLayout
+                android:id="@+id/ButtonLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <Button
                     android:id="@+id/button_tool1"
@@ -64,23 +75,10 @@
                     android:text="Tool3" />
 
                 <LinearLayout
+                    android:id="@+id/ICLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/graphReplacement"
-                        android:layout_width="89dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        app:srcCompat="@mipmap/ic_launcher" />
-
-                    <TextView
-                        android:id="@+id/ICText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="<Dynamic IC content>" />
 
                 </LinearLayout>
             </LinearLayout>
