--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_item_content.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_item_content.xml
@@ -11,14 +11,21 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/listContent"
-            style="@style/TextAppearance.AppCompat.Title"
-            android:layout_width="223dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="monospace"
-            android:textSize="18sp" />
+        <FrameLayout
+            android:id="@+id/TitleFrame"
+            android:layout_width="307dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/listContent"
+                style="@style/TextAppearance.AppCompat.Title"
+                android:layout_width="223dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="monospace"
+                android:textSize="18sp" />
+        </FrameLayout>
 
         <ImageButton
             android:id="@+id/itemDelete"
