Added Empty functions and new GUI elements
/*ATTENTION*/
/*SKRATTAR DU FLÖRLAR DU*/
Before using the GUI, please download "GraphView" plugin first.
link: http://www.android-graphview.org/download-getting-started/

instructions: https://www.youtube.com/watch?v=zbTvJZX0UDk

See "Change notes.txt" in "GUI" folder for detailed changes

Next up:
- GUI for displaying permutations
- GUI for displaying character frequency
- GUI for encrypt/decrypt feature

--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_splash__full_screen.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_splash__full_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
-    tools:context="com.example.ekanugrahapratama.aardvark_project.Splash_FullScreen">
+    tools:context="com.example.ekanugrahapratama.aardvark_project.GUI_Splash_FullScreen">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
