--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_project_view.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_project_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ekanugrahapratama.aardvark_project.projectView">
+    tools:context="com.example.ekanugrahapratama.aardvark_project.GUI_projectView">
 
     <FrameLayout
         android:id="@+id/cipherTextContainer"
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <android.support.v4.widget.NestedScrollView
+            android:id="@+id/cipherText_ScrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true">
@@ -26,7 +27,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/project_view_cipher_text"
@@ -41,7 +42,6 @@
         android:id="@+id/BottomFrame"
         android:layout_width="368dp"
         android:layout_height="298dp"
-        android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,55 +61,174 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/layout_substitution"
                     android:layout_width="match_parent"
-                    android:layout_height="59dp"
-                    android:orientation="horizontal">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
                     <Spinner
-                        android:id="@+id/caesarSpinner"
-                        android:layout_width="165dp"
+                        android:id="@+id/spinner_charA"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <Spinner
+                        android:id="@+id/spinner_charB"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <Button
+                        android:id="@+id/button_charSubstitution"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:text="Substitute by char" />
+
+                    <Button
+                        android:id="@+id/button_stringSubstitution"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Substitute by string" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/layout_caesarLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/seekBar_indicator"
+                        android:layout_width="match_parent"
+                        android:layout_height="31dp"
                         android:layout_weight="1" />
 
-                    <Button
-                        android:id="@+id/button_caesarShiftL"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="SL" />
+                    <SeekBar
+                        android:id="@+id/seekBar_caesar"
+                        android:layout_width="match_parent"
+                        android:layout_height="28dp"
+                        android:layout_weight="1" />
 
-                    <Button
-                        android:id="@+id/button_caesarShiftR"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="SR" />
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/button_caesarShiftL"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="SL" />
+
+                        <Button
+                            android:id="@+id/button_caesarShiftR"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="SR" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/button_tool2"
+                    android:id="@+id/button_cTranspo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Tool2" />
+                    android:text="Columnar Transpo" />
+
+                <Button
+                    android:id="@+id/button_rTranspo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Rectangular Transpo" />
 
                 <Button
                     android:id="@+id/button_tool3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Tool3" />
+                    android:text="*Empty, do latre*" />
 
                 <LinearLayout
                     android:id="@+id/ICLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/cipherICTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
+
+                    <FrameLayout
+                        android:id="@+id/frameLayout_graph"
+                        android:layout_width="match_parent"
+                        android:layout_height="167dp"
+                        android:layout_weight="1">
+
+                        <!--CODE FOR GRAPHVIEW-->
+
+                        <com.jjoe64.graphview.GraphView
+                            android:id="@+id/graph_lot"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+
+                        </com.jjoe64.graphview.GraphView>
+
+                        <!--END OF GRAPHVIEW-->
+
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/layout_period"
+                        android:layout_width="match_parent"
+                        android:layout_height="52dp"
+                        android:layout_weight="1">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/period_indicator"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content" />
+
+                            <SeekBar
+                                android:id="@+id/seekBar_period"
+                                style="@style/Widget.AppCompat.SeekBar.Discrete"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:max="10"
+                                android:progress="3" />
+                        </LinearLayout>
+
+                    </FrameLayout>
+
+                    <android.support.constraint.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:id="@+id/cipherICFreqView"
+                            android:layout_width="159dp"
+                            android:layout_height="136dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_weight="1"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/cipherICTextView"
+                            android:layout_width="113dp"
+                            android:layout_height="22dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_weight="1"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </android.support.constraint.ConstraintLayout>
+
                 </LinearLayout>
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
