--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_project_view.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_project_view.xml
@@ -1,254 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ekanugrahapratama.aardvark_project.GUI_projectView">
+    android:fitsSystemWindows="true"
+    tools:context="com.example.ekanugrahapratama.aardvark_project.Main2Activity">
 
-    <android.support.design.widget.TabLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBar_projectView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/appbar_padding_top"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.design.widget.TabItem
-            android:id="@+id/normalview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="main" />
-
-        <android.support.design.widget.TabItem
-            android:id="@+id/permview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="permutation view" />
-    </android.support.design.widget.TabLayout>
-
-    <FrameLayout
-        android:id="@+id/cipherTextContainer"
-        android:layout_width="379dp"
-        android:layout_height="178dp"
-        android:background="@color/black_overlay"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="16dp">
-
-        <android.support.v4.widget.NestedScrollView
-            android:id="@+id/cipherText_ScrollView"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+        </android.support.design.widget.TabLayout>
+    </android.support.design.widget.AppBarLayout>
 
-                <TextView
-                    android:id="@+id/project_view_cipher_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager_projectView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/BottomFrame"
-        android:layout_width="368dp"
-        android:layout_height="298dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cipherTextContainer"
-        app:layout_constraintVertical_bias="1.0">
-
-        <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
-
-            <LinearLayout
-                android:id="@+id/ButtonLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/button_permutate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Button" />
-
-                <LinearLayout
-                    android:id="@+id/layout_substitution"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <Spinner
-                        android:id="@+id/spinner_charA"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                    <Spinner
-                        android:id="@+id/spinner_charB"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                    <Button
-                        android:id="@+id/button_charSubstitution"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Substitute by char" />
-
-                    <Button
-                        android:id="@+id/button_stringSubstitution"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Substitute by string" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/layout_caesarLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/seekBar_indicator"
-                        android:layout_width="match_parent"
-                        android:layout_height="31dp"
-                        android:layout_weight="1" />
-
-                    <SeekBar
-                        android:id="@+id/seekBar_caesar"
-                        android:layout_width="match_parent"
-                        android:layout_height="28dp"
-                        android:layout_weight="1" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/button_caesarShiftL"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="SL" />
-
-                        <Button
-                            android:id="@+id/button_caesarShiftR"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="SR" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <Button
-                    android:id="@+id/button_cTranspo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Columnar Transpo" />
-
-                <Button
-                    android:id="@+id/button_rTranspo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Rectangular Transpo" />
-
-                <LinearLayout
-                    android:id="@+id/ICLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-
-                    <FrameLayout
-                        android:id="@+id/frameLayout_graph"
-                        android:layout_width="match_parent"
-                        android:layout_height="167dp"
-                        android:layout_weight="1">
-
-                        <!--CODE FOR GRAPHVIEW-->
-
-                        <com.jjoe64.graphview.GraphView
-                            android:id="@+id/graph_lot"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-
-                        </com.jjoe64.graphview.GraphView>
-
-                        <!--END OF GRAPHVIEW-->
-
-                    </FrameLayout>
-
-                    <FrameLayout
-                        android:id="@+id/layout_period"
-                        android:layout_width="match_parent"
-                        android:layout_height="52dp"
-                        android:layout_weight="1">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/period_indicator"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content" />
-
-                            <SeekBar
-                                android:id="@+id/seekBar_period"
-                                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:max="10"
-                                android:progress="3" />
-                        </LinearLayout>
-
-                    </FrameLayout>
-
-                    <android.support.constraint.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1">
-
-                        <TextView
-                            android:id="@+id/cipherICFreqView"
-                            android:layout_width="159dp"
-                            android:layout_height="365dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginTop="8dp"
-                            android:layout_weight="1"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <TextView
-                            android:id="@+id/cipherICTextView"
-                            android:layout_width="186dp"
-                            android:layout_height="373dp"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginTop="8dp"
-                            android:layout_weight="1"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-                    </android.support.constraint.ConstraintLayout>
-
-                </LinearLayout>
-            </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
-    </FrameLayout>
-
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
