Added undo and reset mechanism
but undo and reset is still using non static data storage

--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/cipherNestedScroll"
@@ -53,6 +54,39 @@
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
+
+    <FrameLayout
+        android:id="@+id/layout_undo_reset"
+        android:layout_width="match_parent"
+        android:layout_height="62dp">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/button_reset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:background="@android:drawable/ic_media_rew"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button_undo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1"
+                android:background="@android:drawable/ic_menu_revert"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:layout_editor_absoluteY="7dp" />
+        </android.support.constraint.ConstraintLayout>
+
+    </FrameLayout>
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/toolNestedScroll"
@@ -128,12 +162,6 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Substitute by char" />
-
-                            <Button
-                                android:id="@+id/button_stringSubstitution"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="Substitute by string" />
 
                         </LinearLayout>
 
@@ -285,4 +313,4 @@
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
