--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_frontPage"
+            android:icon="@drawable/ic_launcher_background"
+            android:title="Front Page" />
+        <item
             android:id="@+id/nav_encryption_decryption"
             android:icon="@drawable/ic_menu_camera"
             android:title="Encryption/Decryption" />
