--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/pop_graph.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/pop_graph.xml
@@ -4,91 +4,126 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginBottom="10dp">
 
     <FrameLayout
-        android:id="@+id/frameLayout_graph"
+        android:id="@+id/scrollable_cipher_layout"
         android:layout_width="match_parent"
-        android:layout_height="210dp"
+        android:layout_height="match_parent"
         android:layout_weight="1">
 
-        <!--CODE FOR GRAPHVIEW-->
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <com.jjoe64.graphview.GraphView
-            android:id="@+id/graph_lot"
-            android:layout_width="wrap_content"
-            android:layout_height="195dp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="85dp">
-
-
-        </com.jjoe64.graphview.GraphView>
-
-        <!--END OF GRAPHVIEW-->
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/layout_period"
-        android:layout_width="371dp"
-        android:layout_height="29dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_weight="1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="175dp">
-
-        <LinearLayout
-            android:layout_width="368dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp">
-
-            <TextView
-                android:id="@+id/period_indicator"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <SeekBar
-                android:id="@+id/seekBar_period"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:max="10"
-                android:progress="3" />
-        </LinearLayout>
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView_cipherTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="cipherTextView"
+                    android:transitionName="cipherTextViewTransition" />
+            </LinearLayout>
+        </ScrollView>
 
     </FrameLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="121dp"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteY="39dp">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/cipherICTextView"
-            android:layout_width="177dp"
-            android:layout_height="232dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/cipherICFreqView" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/cipherICFreqView"
-            android:layout_width="178dp"
-            android:layout_height="234dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-    </LinearLayout>
+            <FrameLayout
+                android:id="@+id/frameLayout_graph"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <!--CODE FOR GRAPHVIEW-->
+
+                <com.jjoe64.graphview.GraphView
+                    android:id="@+id/graph_lot"
+                    android:layout_width="wrap_content"
+                    android:layout_height="195dp"
+                    tools:layout_editor_absoluteX="8dp"
+                    tools:layout_editor_absoluteY="85dp">
+
+                </com.jjoe64.graphview.GraphView>
+
+                <!--END OF GRAPHVIEW-->
+
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/layout_period"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:layout_editor_absoluteY="175dp">
+
+                <LinearLayout
+                    android:layout_width="368dp"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    tools:layout_editor_absoluteX="8dp"
+                    tools:layout_editor_absoluteY="8dp">
+
+                    <TextView
+                        android:id="@+id/period_indicator"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <SeekBar
+                        android:id="@+id/seekBar_period"
+                        style="@style/Widget.AppCompat.SeekBar.Discrete"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:max="10"
+                        android:progress="3" />
+                </LinearLayout>
+
+            </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/frequencyDetailsTextView"
+                    android:layout_width="358dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/cipherICTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="189dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_weight="1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/cipherICFreqView" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
