--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/pop_new_project.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/pop_new_project.xml
@@ -22,11 +22,11 @@
 
     <EditText
         android:id="@+id/editText_cipherInputField"
-        android:layout_width="334dp"
-        android:layout_height="223dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="254dp"
+        android:layout_height="180dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="text input"
         android:inputType="textMultiLine"
@@ -42,6 +42,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@android:color/background_light"
         android:text="get from text file"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
