--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/pop_substitution_cipher.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/pop_substitution_cipher.xml
@@ -32,6 +32,7 @@
             android:id="@+id/button_charSubstitution"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/background_light"
             android:text="Substitute by char" />
 
     </LinearLayout>
