--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/colors.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#3b3b3b</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#40acff</color>
 
-    <color name="black_overlay">#66000000</color>
+    <color name="black_overlay">#66f0f0f0</color>
+    <color name="lightwhite_overlay">#66bababa</color>
 </resources>
