--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
@@ -142,6 +142,14 @@
                 android:backgroundTint="@android:color/background_light"
                 android:text="graph" />
 
+            <Button
+                android:id="@+id/button_notes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@android:color/background_light"
+                android:text="Notes" />
+
         </LinearLayout>
     </HorizontalScrollView>
 
