--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_item_content.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_item_content.xml
@@ -32,7 +32,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_menu_delete" />
+            android:background="@drawable/roundcorner"
+            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"/>
 
     </LinearLayout>
 
