--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
@@ -78,6 +78,21 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
+                android:id="@+id/button_save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="@android:color/background_light"
+                android:text="Save"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/button_undo"
+                app:layout_constraintStart_toEndOf="@+id/button_reset"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
                 android:id="@+id/button_undo"
                 android:layout_width="88dp"
                 android:layout_height="wrap_content"
@@ -141,14 +156,6 @@
                 android:layout_weight="1"
                 android:backgroundTint="@android:color/background_light"
                 android:text="graph" />
-
-            <Button
-                android:id="@+id/button_notes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:backgroundTint="@android:color/background_light"
-                android:text="Notes" />
 
         </LinearLayout>
     </HorizontalScrollView>
