Edit project and delete project works

--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_gui__enc__dec.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_gui__enc__dec.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ekanugrahapratama.aardvark_project.GUI_Enc_Dec">
+    tools:context="com.example.FYP.aardvark_project.GUI_Enc_Dec">
 
     <FrameLayout
         android:id="@+id/upperLayout"
