--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_gui_note.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_gui_note.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ekanugrahapratama.aardvark_project.GUI_note">
+    tools:context="com.example.FYP.aardvark_project.GUI_note">
 
     <ScrollView
         android:layout_width="match_parent"
