--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/content_gui_about_us.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/content_gui_about_us.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.ekanugrahapratama.aardvark_project.GUI_aboutUs"
+    tools:context="com.example.FYP.aardvark_project.GUI_aboutUs"
     tools:showIn="@layout/activity_gui_about_us">
 
     <TextView
