--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
@@ -66,6 +66,7 @@
 
             <Button
                 android:id="@+id/button_reset"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -79,6 +80,7 @@
 
             <Button
                 android:id="@+id/button_save"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -94,6 +96,7 @@
 
             <Button
                 android:id="@+id/button_undo"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="88dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -119,6 +122,7 @@
 
             <Button
                 android:id="@+id/button_subPopup"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -127,6 +131,7 @@
 
             <Button
                 android:id="@+id/button_stringSubstitution"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -135,6 +140,7 @@
 
             <Button
                 android:id="@+id/button_shiftPopup"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -143,6 +149,7 @@
 
             <Button
                 android:id="@+id/button_normalTranspo"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -151,6 +158,7 @@
 
             <Button
                 android:id="@+id/button_graphPopup"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
