--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_item_content.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_item_content.xml
@@ -28,12 +28,12 @@
         </FrameLayout>
 
         <ImageButton
-            android:id="@+id/itemDelete"
+            android:id="@+id/imageButton_edit_project"
+            style="@android:style/Widget.Material.Light.ImageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/roundcorner"
-            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"/>
+            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
     </LinearLayout>
 
