--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/menu/menu_main2.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/menu/menu_main2.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.ekanugrahapratama.aardvark_project.Main2Activity">
+    tools:context="com.example.FYP.aardvark_project.Main2Activity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
