--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/pop_graph.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/pop_graph.xml
@@ -11,6 +11,7 @@
         android:id="@+id/scrollable_cipher_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:transitionName="cipherTextViewTransition"
         android:layout_weight="1">
 
         <ScrollView
@@ -26,8 +27,7 @@
                     android:id="@+id/textView_cipherTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="cipherTextView"
-                    android:transitionName="cipherTextViewTransition" />
+                    android:text="cipherTextView" />
             </LinearLayout>
         </ScrollView>
 
