--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/app_bar_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/app_bar_main.xml
@@ -29,6 +29,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@color/colorAccent"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        app:srcCompat="@mipmap/ic_add_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
