--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
@@ -6,54 +6,38 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/cipherNestedScroll"
-        android:layout_width="373dp"
-        android:layout_height="374dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <FrameLayout
+        android:id="@+id/project_view_cipher_frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="385dp"
+        android:transitionName="cipherTextViewTransition">
 
-        <LinearLayout
-            android:id="@+id/nestedScrollViewLayout"
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/cipherNestedScroll"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="374dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <FrameLayout
-                android:id="@+id/cipherTextContainer"
+            <LinearLayout
+                android:id="@+id/nestedScrollViewLayout"
                 android:layout_width="match_parent"
-                android:layout_height="289dp"
-                tools:layout_editor_absoluteX="3dp"
-                tools:layout_editor_absoluteY="0dp">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <android.support.v4.widget.NestedScrollView
-                    android:id="@+id/cipherText_ScrollView"
+                <TextView
+                    android:id="@+id/project_view_cipher_text"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fillViewport="true">
+                    android:layout_height="wrap_content" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/project_view_cipher_text"
-                            android:layout_width="match_parent"
-                            android:layout_height="337dp"
-                            android:transitionName="cipherTextViewTransition"/>
-                    </LinearLayout>
-                </android.support.v4.widget.NestedScrollView>
-
-            </FrameLayout>
-
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/layout_undo_reset"
