--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_frontPage"
-            android:icon="?android:attr/fingerprintAuthDrawable"
+            android:icon="@mipmap/ic_home_black_24dp"
             android:title="Front Page" />
         <item
             android:id="@+id/nav_encryption_decryption"
