--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/styles.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/styles.xml
@@ -7,9 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:statusBarColor">@color/colorPrimary</item>
-        <item name="android:navigationBarColor">@color/black_overlay</item>
-        <item name="android:colorBackground">@android:color/background_light</item>
+        <item name="android:navigationBarColor">@color/cardview_light_background</item>
+        <item name="android:colorBackground">@color/cardview_light_background</item>
         <item name="android:windowContentTransitions">true</item>
+        <item name="android:textColorPrimary">?attr/actionModeSplitBackground</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
