added UI elements
- Search bar added
- Long pressing on the card will show cipher text preview pop up

--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
@@ -58,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:padding="16dp"
-                    android:text="TITLE"
+                    android:text="@{viewHolder.title}"
                     android:textAppearance="@android:style/TextAppearance.Material.Large"
                     android:textSize="18sp" />
 
@@ -71,8 +71,8 @@
                     <Button
                         android:id="@+id/card_button_inner"
                         style="@style/Widget.AppCompat.Button.Borderless"
-                        android:layout_width="0dp"
-                        android:layout_height="27dp"
+                        android:layout_width="19dp"
+                        android:layout_height="24dp"
                         android:layout_marginBottom="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
