--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_permutation.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_permutation.xml
@@ -19,7 +19,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/permutation_cipherTextView"
+                    android:id="@+id/perm_cTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </FrameLayout>
