Bug fixes and new animation for GUI
- Fixed action bar CTD error bug (reported @26 January 2018)
- The user can now click on the graph in frequency analysis activity to expand the detailed information of the graph (now with animation!)
- Animated the search bar, so the user have to be at the top of the list to be able to see the search bar

--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/fragment_project_view_main.xml
@@ -57,7 +57,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_weight="1"
-                android:background="@android:drawable/ic_media_rew"
+                android:text="reset"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -87,7 +87,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_weight="1"
-                android:background="@android:drawable/ic_menu_revert"
+                android:text="undo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
