--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/activity_graph.xml
@@ -5,14 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginBottom="10dp">
+    android:layout_marginBottom="10dp"
+
+    android:animateLayoutChanges="true">
 
     <FrameLayout
         android:id="@+id/scrollable_cipher_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:transitionName="cipherTextViewTransition"
-        android:layout_weight="1">
+        android:visibility="visible">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -99,6 +102,7 @@
             </FrameLayout>
 
             <LinearLayout
+                android:id="@+id/graphDetailedInfoLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
