--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/content_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.FYP.aardvark_project.GUI_MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:showIn="@layout/app_bar_main"
+
+    android:animateLayoutChanges="true">
 
     <!--DUMMY ITEM, TO PREVENT EDIT TEXT FROM RECEIVING FOCUS UPON CREATING ACTIVITY-->
     <LinearLayout
