More bug fixing
+ Theme changing Fully works
+ Fixed a bug (chars/word and words/line sliders does not correspond to the cipher text (discovered today))
+ Fixed card view long click sensitivity (reported @ 25 January 2018)

--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/xml/pref_general.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/xml/pref_general.xml
@@ -3,7 +3,8 @@
     <SwitchPreference
         android:defaultValue="false"
         android:key="dark_theme_preference"
-        android:summary="Enable this theme to avoid eyestrain. NOTE: Please restart the app after making changes to this"
+        android:summary="Enable this theme to reduce eyestrain.
+NOTE: REQUIRES APP RESTART"
         android:title="Use Dark Theme" />
 
     <!-- NOTE: EditTextPreference accepts EditText attributes. -->
