--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/front_page_card.xml
@@ -14,16 +14,15 @@
         android:layout_height="226dp"
         android:layout_marginBottom="8dp"
 
-        android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
 
         app:cardBackgroundColor="@color/cardview_light_background"
         app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <GridLayout
             android:layout_width="match_parent"
@@ -39,7 +38,7 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="163dp">
+                android:layout_height="140dp">
 
                 <TextView
                     android:id="@+id/card_preview"
